--- a/produtos.html
+++ b/produtos.html
@@ -16,6 +16,7 @@
         <td><a href="produtos.html">Produtos</a></td>
         <td><a href="lojas.html">Nossas lojas</a></td>
         <td><a href="fale-conosco.html">Fale conosco</a></td>
+        <td><a target="_blank" href="https://github.com/robertojunnior/"> <img width="40px" src="./imagens/icone-git.png" alt="git-logo"></a></td>
     </tr>
 </table>
 <!--Fim do menu-->
