--- a/index.html
+++ b/index.html
@@ -9,31 +9,41 @@
     <link rel="shortcut icon" href="./imagens/logo-projeto-fullstack-recode-favicon.png" type="image/x-icon">
 
 </head>
+
 <body>
-    <!--Início do menu-->
-    <table id="menu">
-        <tr>
-            <td><a href="index.html"> <img id="logo" src="./imagens/logo-projeto-fullstack-recode.png" alt="One logo"></a></td>
-            <td><a href="produtos.html">Produtos</a></td>
-            <td><a href="lojas.html">Nossas lojas</a></td>
-            <td><a href="fale-conosco.html">Fale conosco</a></td>
-            <td><a target="_blank" href="https://github.com/robertojunnior/"> <img width="40px" src="./imagens/icone-git.png" alt="git-logo"></a></td>
+    <header>
+        <!--Início do menu-->
+        <table id="menu">
+            <tr>
+                <td><a href="index.html"> <img id="logo" src="./imagens/logo-projeto-fullstack-recode.png" alt="One logo"></a></td>
+                <td><a href="produtos.html">Produtos</a></td>
+                <td><a href="lojas.html">Nossas lojas</a></td>
+                <td><a href="fale-conosco.html">Fale conosco</a></td>
+                <td><a target="_blank" href="https://github.com/robertojunnior/"> <img width="40px" src="./imagens/icone-git.png" alt="git-logo"></a></td>
 
-        </tr>
-    </table>
-    <!--Fim do menu-->
+            </tr>
+        </table>
+        <!--Fim do menu-->
+    </header>
+        <main>         
+            <h2>Seja bem vindo(a)!</h2>
+            <p>Aqui em nossa loja, <em><strong>programadores tem desconto</strong></em> especial em produtos para sua casa!</p>
+        <!-- TIPOS DE ESTILIZAÇÃO INTERNA 
+            <p style="font-size: 30px; color: red;">José Bonifácio da Silva</p>
+            <h2 style="color:blue">Teste de colocação no texto em html</h2>--> 
+        
 
-    <h2>Seja bem vindo(a)!</h2>
-    <p>Aqui em nossa loja, <em><strong>programadores tem desconto</strong></em> especial em produtos para sua casa!</p>
-   <!-- TIPOS DE ESTILIZAÇÃO INTERNA 
-    <p style="font-size: 30px; color: red;">José Bonifácio da Silva</p>
-    <h2 style="color:blue">Teste de colocação no texto em html</h2>--> 
-   
+            <div id="pagamentos">
+                <h4 id="fp">Formas de Pagamento</h4>
+                <p><img id="formas-pagamento" src="./imagens/formas-pagamento.jpg" alt="formas-pagamento"></p>
+            </div>
+        </main>
 
-    <div id="pagamentos">
-        <h4 id="fp">Formas de Pagamento</h4>
-        <p><img id="formas-pagamento" src="./imagens/formas-pagamento.jpg" alt="formas-pagamento"></p>
-    </div>
-    
+        <footer>
+            <p>
+                &copy; 2022 - Todos os direitos reservados - Full Stack Eletro
+            </p>
+        </footer>
 </body>
+
 </html>
