--- a/lojas.html
+++ b/lojas.html
@@ -53,7 +53,11 @@
     <p><img id="formas-pagamento" src="./imagens/formas-pagamento.jpg" alt="formas-pagamento"></p>
 </div>
 
-</body>
+<footer>
+    <p>
+        &copy; 2022 - Todos os direitos reservados - Full Stack Eletro
+    </p>
+</footer>
 
-   </body>
+</body>
 </html>
