--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
 
 </html>
 
-<a target="_blank" href="">
-    <img src="" alt="">
-</a>
+<!-- teste de input radio 
+<input type="radio" name="ganhador">Joao
+<input type="radio" name="ganhador">Maria
+<input type="radio" name="ganhador">jose
+-->
 
