--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
             <div id="pagamentos">
                 <h4 id="fp">Formas de Pagamento</h4>
-                <p><img id="formas-pagamento" src="./imagens/formas-pagamento.jpg" alt="formas-pagamento"></p>
+                <p><img id="formas-pagamento" src="./imagens/logo_pagamento.webp" alt="formas-pagamento"></p>
             </div>
         </main>
 
